--- a/_includes/credits+contacts.liquid
+++ b/_includes/credits+contacts.liquid
@@ -1,9 +1,8 @@
-<div style="margin-top:100px">
-</div>
+<section markdown="1" style="margin:100px 0;" class="text-center">
 
 [crédits]     \|     [contact]     \|     {{ site.twitter_link }}     \|     {{ site.facebook_link }}
 
-© 2011 – {{ site.time | date: "%Y" }} Rosemonde Rossel  | [rosemonderossel.com]  |  [psychogenealogie-suisse.ch]
+© 2011 – {{ site.time | date: "%Y" }} Rosemonde Rossel     \|     [rosemonderossel.com]     \|     [psychogenealogie-suisse.ch]
 
 [crédits]: credits
 [contact]: contact
@@ -11,3 +10,5 @@
 [rosemonderossel.com]: {{ site.mailto_contact_sensdesprenoms_com_obf }}
 
 ❧
+
+</section>
