--- a/_includes/navigation.liquid
+++ b/_includes/navigation.liquid
@@ -7,7 +7,7 @@
                 <span class="icon-bar"/>
                 <span class="icon-bar"/>
             </button>
-            <a class="navbar-brand" href="./">Le sens des prénoms<br/><span>en transgénérationnel</span></a>
+            <a class="navbar-brand" href="./">{{ site.navbar-brand }}</span></a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
