--- a/_layouts/page.liquid
+++ b/_layouts/page.liquid
@@ -7,7 +7,7 @@ layout: pretty-print-compress
 {% include analyticstracking.liquid %}
 {% include facebook-sdk.liquid %}
 {% include navigation.liquid %}
-<div class="container text-center contenu-principal animated fadeIn">
+<div class="container text-left contenu-principal animated fadeIn">
     <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
             {{ content }}
