--- a/_includes/prev-next-buttons.liquid
+++ b/_includes/prev-next-buttons.liquid
@@ -1,9 +1,9 @@
 <div class="col-sm-12 btn-prev-next text-center">
-	<a id="bouton-prec" class="btn btn-primary bouton-prec" title="Page précédente" href="" role="button">«</a>
+	<a id="bouton-prec" class="btn btn-light bouton-prec" title="Page précédente" href="" role="button" style="font-size:50px">«</a>
 	<span>&nbsp;</span>
-	<a class="btn btn-primary bouton-accueil" title="Retour à l’accueil" href="./" role="button">
+	<a class="btn btn-light bouton-accueil" title="Retour à l’accueil" href="./" role="button">
 		<img src="favicon.svg" alt="...">
 	</a>
 	<span>&nbsp;</span>
-	<a id="bouton-suiv" class="btn btn-primary bouton-suiv" title="Page suivante" href="" role="button">»</a>
+	<a id="bouton-suiv" class="btn btn-light bouton-suiv" title="Page suivante" href="" role="button" style="font-size:50px">»</a>
 </div>
